[package]
name = "spacesort"
version = "0.0.1"
authors = ["Daniel Valenzuela <dsvalenzuela@uc.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"
rand_pcg = "0.2.1"

[dependencies]
rdxsort = "0.3.0"
counting_sort = "1.0.7"
bloom = "0.2.0"
quickersort = "3.0.1"
num = "0.3.1"

[[bench]]
name = "final_space"
harness = false
